maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:83: error: not found: value -
      case indice-1 => marquerAutour(x,y,indice)
                 ^ShortestPathMaze:91: error: not found: value setDiresction
    setDiresction(dirMinimale(x,y))
    ^ShortestPathMaze:91: error: not found: value x
    setDiresction(dirMinimale(x,y))
                              ^ShortestPathMaze:91: error: not found: value y
    setDiresction(dirMinimale(x,y))
                                ^